Fix hero content alignment

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -140,14 +140,18 @@ a {
 /* ========== HERO ========== */
 
 .hero {
+    display: flex;
+    align-items: flex-end;
     height: 80vh;
     min-height: 60rem;
     background-image: url("../img/hero.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    background-position: center;
     &__content {
-        height: 100%;
+        height: calc(100% - 6rem);
+        width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
